[package]
name = "connect-four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
stylers = "*"
stylers_macro = "1.0.2"
rand = "0.8.5"
log = "0.4.20"
console_log = "0.1.2"


[build-dependencies]
stylers = {  version = "*" }
trunk = { version = "*"}
